mudado estrutura para add dto